@@ -26,6 +26,7 @@ version <next>:
 - libavcore added
 - SubRip subtitle file muxer and demuxer
 - Chinese AVS encoding via libxavs
+- ffprobe -show_packets option added
 
 
 
